# ZPRP-2025L-Private-Event-Planner

./: .gitignore  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  manage.py  pyproject.toml  requirements.txt
backend/events/: admin.py  emails.py  factories.py  models.py  serializers.py  tasks.py  tests.py  urls.py  utils.py  views.py
backend/events/migrations/: 0001_initial.py  0002_alter_participant_email.py  0003_remove_invitation_name_remove_participant_is_admin_and_more.py  0003_remove_participant_password_hash_and_more.py  0004_comment_uuid_delete_personalizedinvitation.py  0005_personalizedinvitation.py
backend/events/templates/: event_admin_link.html  event_admin_link.txt  event_cancellation.html  event_cancellation.txt  event_update_notification.html  event_update_notification.txt  invite_email.html  invite_email.txt
backend/events/tests/: test_emails.py  test_views.py
backend/private_event_planner/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: Dockerfile  next-i18next.config.js  package-lock.json  package.json  postcss.config.mjs
frontend/public/locales/en/: translation.json
frontend/public/locales/pl/: translation.json
frontend/src/: middleware.js
frontend/src/api/: api.js
frontend/src/app/: layout.js  page.js
frontend/src/app/[locale]/: layout.js  page.js  page.module.css
frontend/src/app/[locale]/create-event/: createEvent.module.css  page.js
frontend/src/app/[locale]/event/[uuid]/: eventDetail.module.css  page.js
frontend/src/app/[locale]/event/[uuid]/[edit_uuid]/: addParticipantModal.module.css  editEvent.module.css  page.js
frontend/src/app/[locale]/invitation/accept/[uuid]/: page.js
frontend/src/app/[locale]/personalized-invitation/accept/[uuid]/: page.js
frontend/src/app/create-event/: createEvent.module.css  page.js
frontend/src/app/event/: page.js
frontend/src/app/event/[uuid]/: eventDetail.module.css  page.js
frontend/src/app/event/[uuid]/[edit_uuid]/: addParticipantModal.module.css  editEvent.module.css  page.js
frontend/src/app/invitation/accept/[uuid]/: page.js
frontend/src/app/personalized-invitation/accept/[uuid]/: page.js
frontend/src/components/: AcceptGenericInvitationClient.js  AcceptPersonalizedInvitationClient.js  AcceptUniversalInvitationClient.js  CreateEventForm.js  EditEventClient.js  EventDetailsClient.js  HomePageClient.js  LanguageSwitcher.js  LayoutClient.js  TranslationsProvider.js
frontend/src/i18next/: i18n.client.js  i18n.config.js  i18n.server.js
frontend/src/styles/: acceptInvitation.module.css  globals.css
nginx/: default.conf.template
